Fixed alignment so Show verbose log lines and Deploy Again are aligned on the right.

--- a/riff-raff/app/assets/stylesheets/magenta.less
+++ b/riff-raff/app/assets/stylesheets/magenta.less
@@ -128,10 +128,6 @@ ul.magenta-list {
   margin-bottom:0;
 }
 
-.checkbox-fix-right {
-  margin-right: 18px;
-}
-
 .checkbox-fix-top {
   margin-top: 20px;
 }
